apps/home/zone-configurator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zone-configurator
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: zone-configurator
          image: docker.io/everythingsmarthome/everything-presence-mmwave-configurator:2.2.4@sha256:432eabc526fe5c0cd1ca5b718b2da9556a2887dc3b22a7abb931f0e305f72832
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 42069
              protocol: TCP
            - name: firmware
              containerPort: 38080
              hostPort: 38080
              protocol: TCP
          resources: {}
          livenessProbe:
            httpGet:
              path: /api/health
              port: 42069
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 42069
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /api/health
              port: 42069
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
