apps/home/zone-configurator/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zone-configurator
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`presence.red.orleans.io`)
      kind: Rule
      services:
        - name: zone-configurator
          port: 42069
      middlewares:
        - name: forward-auth
          namespace: zone-configurator
  tls:
    secretName: wildcard-orleans-io
---
apiVersion: v1
kind: Service
metadata:
  name: zone-configurator
  labels:
    monitor: zone-configurator
spec:
  selector:
    component: app
  ports:
    - name: http
      port: 42069
